# verify-plan-skill

./: CONTRIBUTING.md  LICENSE  PLAN_REVIEW.md  README.md  SKILL.md  TODO.md  pyproject.toml
commands/: plan-implemented.md
examples/: sample-plan.md
scripts/: cross_reference.py  gather_evidence.py  install_command.py  languages.py  parse_plan.py  review.py
tests/: __init__.py  test_cross_reference.py  test_parse_plan.py
